logic error fix

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 with.txt
 without.txt
 
+.idea
+
 # Created by https://www.toptal.com/developers/gitignore/api/intellij
 # Edit at https://www.toptal.com/developers/gitignore?templates=intellij
 
