--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Python Test
 
 on:
   push:
-    branches: [ "main", "test" ]
+    branches: [ "main"]
   pull_request:
     branches: [ "main" ]
 
